--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>오늘은 메뉴는?</title>
+    <title>오늘의 메뉴?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>오늘은 메뉴는?</h1>
+        <h1>오늘의 메뉴?</h1>
         <button id="getWeatherButton">현재 위치 날씨로 추천</button>
         <div id="weatherInfo"></div>
         <div id="weatherIcon"></div>
