--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
         <div id="weatherInfo"></div>
         <div id="weatherIcon"></div>
         <div id="weatherMenuDisplay"></div>
+        <button id="getGPTRecommendationButton">GPT 추천 메뉴 받기</button>
+        <div id="gptRecommendation"></div>
     </div>
     <script src="script.js"></script>
 </body>
